Added a New Place

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
     <select id="districtSelect" onchange="showPlaces()">
         <option value="">-- Select District --</option>
+        <option value="karur">Karur</option>
         <option value="chennai">Chennai</option>
         <option value="coimbatore">Coimbatore</option>
         <option value="madurai">Madurai</option>
@@ -68,6 +69,13 @@
     <script>
         const districtPlaces = {
             chennai: [
+                "Marina Beach",
+                "Kapaleeshwarar Temple",
+                "Fort St. George",
+                "Santhome Church",
+                "Valluvar Kottam"
+            ],
+                        karur: [
                 "Marina Beach",
                 "Kapaleeshwarar Temple",
                 "Fort St. George",
