--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <select id="districtSelect" onchange="showPlaces()">
         <option value="">-- Select District --</option>
         <option value="karur">Karur</option>
+        <option value="Mysore">Mysore</option>
         <option value="chennai">Chennai</option>
         <option value="coimbatore">Coimbatore</option>
         <option value="madurai">Madurai</option>
@@ -76,6 +77,13 @@
                 "Valluvar Kottam"
             ],
                         karur: [
+                "Marina Beach",
+                "Kapaleeshwarar Temple",
+                "Fort St. George",
+                "Santhome Church",
+                "Valluvar Kottam"
+            ],
+                        Mysore: [
                 "Marina Beach",
                 "Kapaleeshwarar Temple",
                 "Fort St. George",
