--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <select id="districtSelect" onchange="showPlaces()">
         <option value="">-- Select District --</option>
         <option value="karur">Karur</option>
-        <option value="Mysore">Mysore</option>
+        <option value="Mysoru">Mysoru</option>
         <option value="chennai">Chennai</option>
         <option value="coimbatore">Coimbatore</option>
         <option value="madurai">Madurai</option>
@@ -83,7 +83,7 @@
                 "Santhome Church",
                 "Valluvar Kottam"
             ],
-                        Mysore: [
+                        Mysoru: [
                 "Marina Beach",
                 "Kapaleeshwarar Temple",
                 "Fort St. George",
